--- a/frontend/components/layout/_layout.scss
+++ b/frontend/components/layout/_layout.scss
@@ -19,5 +19,10 @@ a {
 
 // App
 .team-directory-app {
-  background: lavender;
+  .team-directory-app-body {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+
+    padding: 35px 40px;
+  }
 }
