Add signin with slack button. * Add propTypes

--- a/frontend/components/layout/_layout.scss
+++ b/frontend/components/layout/_layout.scss
@@ -26,3 +26,20 @@ a {
     padding: 35px 40px;
   }
 }
+
+
+.auth-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  width: 100%;
+  height: 100vh;
+
+  .auth-section-title {
+    font-family: "Hind", sans-serif;
+
+    display: block;
+  }
+}
