--- a/frontend/components/header/_header.scss
+++ b/frontend/components/header/_header.scss
@@ -1,8 +1,8 @@
-@import "../layout/colors";
+@import "../layout/color";
 
 .main-header {
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: 250px 2fr 1fr;
 
   padding: 35px 40px;
 
