--- a/frontend/components/input/_input.scss
+++ b/frontend/components/input/_input.scss
@@ -1,22 +1,26 @@
-@import "../layout/colors";
+@import "../layout/color";
+@import "../layout/font";
 
 .input {
+    @include HindClassic();
+
     padding: 16px 25px;
-    color: $gull-gray;
     background-color: $mystic;
 
     border-radius: 28px;
     border:none;
-    font-size: 24px;
-    line-height: 36px;
-    font-family: "Hind", sans-serif;
-    font-weight:bold;
-    font-style: normal;
 
     width: 505px;
     height: 56px;
 
    &::-webkit-input-placeholder {
     color: $gull-gray;
+  }
+
+  &:focus {
+    background-color:white;
+    border: 2px solid $dark;
+    outline: none;
+
   }
 }
