Implement mock profile detail page.

--- a/frontend/components/layout/_layout.scss
+++ b/frontend/components/layout/_layout.scss
@@ -17,6 +17,12 @@ a {
   text-decoration: none;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 // App
 .team-directory-app {
   .team-directory-app-body {
