--- a/frontend/components/header/_header.scss
+++ b/frontend/components/header/_header.scss
@@ -30,4 +30,9 @@
   @media screen and (max-width: 1024px){
     padding: 20px;
   }
+
+  @media screen and (max-width: 576px){
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+  }
 }
