--- a/frontend/pages/profile/_user.scss
+++ b/frontend/pages/profile/_user.scss
@@ -141,4 +141,29 @@
 
     font-size: 16px;
   }
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
+
+  @media screen and (max-width: 468px) {
+    width: 100%;
+
+    .user-profile-avatar-and-meta {
+      grid-template-columns: 50px 1fr;
+    }
+
+    .user-profile-avatar {
+      width: 50px;
+      height: 50px;
+    }
+
+    .user-profile-detailed-info-row {
+      display: block;
+    }
+    
+    .user-profile-detailed-info-row-title {
+      text-align: left;
+    }
+  }
 }
