--- a/frontend/components/grid/item/_grid-item.scss
+++ b/frontend/components/grid/item/_grid-item.scss
@@ -1,6 +1,6 @@
 .grid-item {
   position: relative;
-  width: 260px;
+  width: 100%;
   height: 260px;
   border-radius: 24px;
   overflow: hidden;
@@ -35,6 +35,7 @@
     .grid-item-name {
       display: none;
     }
+
     .grid-item-detail-container {
       display: flex;
       flex-direction: column;
