--- a/frontend/components/grid/item/_grid-item.scss
+++ b/frontend/components/grid/item/_grid-item.scss
@@ -28,7 +28,86 @@
   }
 
   .grid-item-detail-container {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    z-index: 1;
+
+    opacity: 0;
+
+    transition: opacity 0.3s;
+
+    &::before {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #E2203E;
+      opacity: 0.8;
+      z-index: -1;
+      content: ""
+    }
+
+    .grid-item-detail-team,
+    .grid-item-detail-current-projects {
+      margin-bottom: 10px;
+      font-family: "Hind", sans-serif;
+      font-weight: bold;
+      font-size: 24px;
+      color: #FFFFFF;
+      max-width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .grid-item-detail-current-projects {
+      font-size: 20px;
+    }
+
+    .grid-item-detail-one-liner-list {
+      display: block;
+
+      .grid-item-detail-one-liner-list-item {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 10px 1fr;
+        grid-gap: 10px;
+        font-family: "Hind", sans-serif;
+        font-size: 18px;
+        line-height: 36px;
+        color: #FFFFFF;
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+        .grid-item-detail-one-liner-list-item-bullet {
+          width: 10px;
+          height: 10px;
+          border-radius: 100%;
+          border: solid 1px #FFFFFF;
+        }
+
+        .grid-item-detail-one-liner-list-item-text {
+          max-width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+      }
+    }
+
+    .grid-item-detail-right-arrow {
+      margin-left: auto;
+      margin-top: auto;
+    }
   }
 
   &:hover {
@@ -37,82 +116,7 @@
     }
 
     .grid-item-detail-container {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      padding: 20px;
-      z-index: 1;
-
-      &::before {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #E2203E;
-        opacity: 0.8;
-        z-index: -1;
-        content: ""
-      }
-
-      .grid-item-detail-team,
-      .grid-item-detail-current-projects {
-        margin-bottom: 10px;
-        font-family: "Hind", sans-serif;
-        font-weight: bold;
-        font-size: 24px;
-        color: #FFFFFF;
-        max-width: 100%;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-
-      .grid-item-detail-current-projects {
-        font-size: 20px;
-      }
-
-      .grid-item-detail-one-liner-list {
-        display: block;
-
-        .grid-item-detail-one-liner-list-item {
-          display: grid;
-          align-items: center;
-          grid-template-columns: 10px 1fr;
-          grid-gap: 10px;
-          font-family: "Hind", sans-serif;
-          font-size: 18px;
-          line-height: 36px;
-          color: #FFFFFF;
-          max-width: 100%;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          white-space: nowrap;
-
-          .grid-item-detail-one-liner-list-item-bullet {
-            width: 10px;
-            height: 10px;
-            border-radius: 100%;
-            border: solid 1px #FFFFFF;
-          }
-
-          .grid-item-detail-one-liner-list-item-text {
-            max-width: 100%;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-          }
-        }
-      }
-
-      .grid-item-detail-right-arrow {
-        margin-left: auto;
-        margin-top: auto;
-      }
+      opacity: 1;
     }
   }
 }
