--- a/frontend/pages/profile/_user.scss
+++ b/frontend/pages/profile/_user.scss
@@ -3,6 +3,7 @@
 .user-profile-backdrop {
   position: fixed;
   top: 0; right: 0; bottom: 0; left: 0;
+  z-index: 3;
 
   background: rgba($alizarin-crimson, 0.82)
 }
@@ -10,6 +11,7 @@
 .user-profile-section {
   position: fixed;
   top: 0; right: 0; bottom: 0;
+  z-index: 4;
 
   padding: 36px;
 
