--- a/frontend/pages/profile/_user.scss
+++ b/frontend/pages/profile/_user.scss
@@ -13,6 +13,8 @@
   top: 0; right: 0; bottom: 0;
   z-index: 4;
 
+  overflow: auto;
+
   animation-duration: 0.5s;
   animation-fill-mode: both;
   animation-name: fadeInRight;
