Minor layout responsive improvements.

--- a/frontend/components/grid/item/_grid-item.scss
+++ b/frontend/components/grid/item/_grid-item.scss
@@ -6,9 +6,8 @@
   overflow: hidden;
   cursor: pointer;
 
-  .grid-item-image {
-    width: 100%;
-  }
+  background-size: cover;
+  background-position: center;
 
   .grid-item-name {
     display: flex;
