--- a/frontend/components/grid/_grid.scss
+++ b/frontend/components/grid/_grid.scss
@@ -2,4 +2,12 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
+
+  @media screen and (max-width: 1024px){
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media screen and (max-width: 768px){
+    grid-template-columns: 1fr;
+  }
 }
