--- a/frontend/pages/profile/_user.scss
+++ b/frontend/pages/profile/_user.scss
@@ -25,6 +25,25 @@
 
   background: white;
 
+  .user-profile-section-close-button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    border-radius: 0px 0px 0px 24px;
+    background-color: $alizarin-crimson;
+    cursor: pointer;
+
+    .user-profile-section-close-button-icon {
+      width: 16px;
+      height: 16px;
+    }
+  }
+
   .user-profile-avatar-and-meta {
     display: grid;
     grid-template-columns: 200px 1fr;
