--- a/frontend/components/header/_header.scss
+++ b/frontend/components/header/_header.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 250px 2fr 1fr;
 
-  padding: 25px 30px;
+  padding: 25px 40px;
 
   .main-header-logo {
     vertical-align: sub;
@@ -34,5 +34,10 @@
   @media screen and (max-width: 576px){
     grid-template-columns: 1fr;
     grid-row-gap: 20px;
+    justify-items: center;
+
+    .main-header-logo-wrapper{
+      align-content: center;
+    }
   }
 }
