--- a/frontend/components/layout/_layout.scss
+++ b/frontend/components/layout/_layout.scss
@@ -33,12 +33,13 @@ p {
     display: grid;
     grid-template-columns: 250px 1fr;
 
-    padding: 35px 40px;
+    padding: 0 40px 35px 40px;
   }
 
   @media screen and (max-width: 768px) {
     .team-directory-app-body {
       grid-template-columns: 1fr;
+      padding: 0 20px 35px 20px;
     }
   }
 }
