--- a/frontend/components/sidebar/_sidebar.scss
+++ b/frontend/components/sidebar/_sidebar.scss
@@ -15,26 +15,39 @@
 
     font-size: 16px;
     text-transform: uppercase;
+    padding: 0;
 
     border:none;
     outline: none;
+    background: transparent;
 
     cursor: pointer;
 
     color:$gull-gray;
 
-    &.active{
-        border-bottom: 3px solid $dark;
-        border-bottom-left-radius: 2px;
-        border-bottom-right-radius: 2px;
-        border-top-right-radius: 2px;
-        border-top-left-radius: 2px;
-         
-        color:$dark; 
+    &.active{ 
+        color:$dark;
+
+        &:after{
+            content: "";
+            display: block;
+            width: 30px;
+            height: 3px;
+            background-color: $dark;
+            border-radius: 2px;
+            margin: 0 auto;
+        }
+    }
+
+    &:hover{
+        opacity: 0.9;
     }
 }
 
 .sidebar-tab-items{
-    margin-top:25px;
-    margin-right: 58px;
+    margin: 25px 58px 25px 0;
+
+    @media screen and (max-width: 768px){
+        margin-right:0;
+    }
 }
