--- a/frontend/components/input/_input.scss
+++ b/frontend/components/input/_input.scss
@@ -8,8 +8,8 @@
   padding-top: 2px;
   background-color: $mystic;
 
+  border: 2px solid transparent;
   border-radius: 28px;
-  border:none;
 
   height: 45px;
 
@@ -20,7 +20,7 @@
   &:focus {
     background-color:white;
 
-    border: 2px solid $dark;
+    border-color: $dark;
     outline: none;
   }
 }
