--- a/frontend/pages/profile/_user.scss
+++ b/frontend/pages/profile/_user.scss
@@ -5,7 +5,11 @@
   top: 0; right: 0; bottom: 0; left: 0;
   z-index: 3;
 
-  background: rgba($alizarin-crimson, 0.82)
+  background: rgba($alizarin-crimson, 0.82);
+
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: fadeIn;
 }
 
 .user-profile-section {
@@ -192,6 +196,15 @@
     .user-profile-detailed-info-row-title {
       text-align: left;
     }
+  }
+}
+
+@keyframes fadeIn{
+  0%{
+    opacity:0;
+  }
+  100%{
+    opacity:1;
   }
 }
 
