--- a/frontend/components/grid/_grid.scss
+++ b/frontend/components/grid/_grid.scss
@@ -1,10 +1,10 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-gap: 20px;
 
-  @media screen and (max-width: 1024px){
-    grid-template-columns: 1fr 1fr;
+  @media screen and (max-width: 1200px){
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   @media screen and (max-width: 768px){
